Crash on close regression

Seems to be regression since !6195 (merged).

Logs:

main interface error: cannot delete callback 00007ffcf0e74240 from nonexistent variable 'intf-add'
main interface error: cannot delete callback 00007ffcf0e74490 from nonexistent variable 'intf-add'
main interface debug: attempt to destroy nonexistent variable "intf-add"

Assertion failure:

[0x0]   ntdll!NtTerminateProcess+0x14   0xcc6d6fecd8   0x7ffdd0b21168   
[0x1]   ntdll!RtlExitUserProcess+0xb8   0xcc6d6fece0   0x7ffdcfbe7fab   
[0x2]   KERNEL32!ExitProcessImplementation+0xb   0xcc6d6fed10   0x7ffdcfdbd7bd   
[0x3]   msvcrt!_crtExitProcess+0x15   0xcc6d6fed40   0x7ffdcfdbde3b   
[0x4]   msvcrt!doexit+0x17b   0xcc6d6fed70   0x7ffdcfdae0e7   
[0x5]   msvcrt!raise+0x267   0xcc6d6fede0   0x7ffdcfdb0d70   
[0x6]   msvcrt!wassert+0x820   0xcc6d6fee50   0x7ffd0c8e62d7   
[0x7]   libvlccore!Destroy+0x147   0xcc6d6ff530   0x7ffd0c8e6573   
[0x8]   libvlccore!CleanupVar+0x13   0xcc6d6ff580   0x7ffd0c942b9b   
[0x9]   libvlccore!tdestroy+0x2b   0xcc6d6ff5b0   0x7ffd0c8e654c   
[0xa]   libvlccore!var_DestroyAll+0x2c   0xcc6d6ff5f0   0x7ffd0c8e4e44   
[0xb]   libvlccore!vlc_object_deinit+0x54   0xcc6d6ff630   0x7ffd0c8e4e73   
[0xc]   libvlccore!vlc_object_delete+0x13   0xcc6d6ff670   0x7ffd0c818112   
[0xd]   libvlccore!intf_DestroyAll+0xb2   0xcc6d6ff6a0   0x7ffd0c7e1dff   
[0xe]   libvlccore!libvlc_InternalCleanup+0x5f   0xcc6d6ff6f0   0x7ffdbea317ea   
[0xf]   libvlc!libvlc_release+0x7a   0xcc6d6ff740   0x7ff63929190c   
[0x10]   vlc!WinMain+0x56c   0xcc6d6ff770   0x7ff639291d68   
[0x11]   vlc!main+0xd8   0xcc6d6ffa80   0x7ff639291316   
[0x12]   vlc!WinMainCRTStartup+0x1d6   0xcc6d6ffb30   0x7ff639291156   
[0x13]   vlc!WinMainCRTStartup+0x16   0xcc6d6ffb80   0x7ffdcfbe257d   
[0x14]   KERNEL32!BaseThreadInitThunk+0x1d   0xcc6d6ffbb0   0x7ffdd0b2af08   
[0x15]   ntdll!RtlUserThreadStart+0x28   0xcc6d6ffbe0   0x0