qt: destroy MainCtx when UI is unloaded

MainCtx references some VLC interface variables, so it needs to be destroyed
before the interface is released. compositor shouln't use MainCtx once the UI is unloaded

fix: #28835